Create an outcome per path for Tunisia
The goal of this story is to migrate the flow for Tunisia to use
the outcome per path strategy.

Within, flat content have been introduced for Tunisia. The flat
content will be linked and form part of the outcome per path flow.

Given the aforementioned, the test artefacts haven't been affected by
this change.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -246,6 +246,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/sweden/uk/partner_othe
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/thailand/_opposite_sex.govspeak.erb: 835e9b13b13e4bbf2d336298764e46c3
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/thailand/_same_sex.govspeak.erb: 8b5b18c463388127a068c7de509d3683
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/thailand/_title.govspeak.erb: 0fe584efebbddb53398d749efcc43ea9
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/_title.govspeak.erb: a4e5918ab1ca322cd6071f74fa20623a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/ceremony_country/partner_british/_opposite_sex.govspeak.erb: b45e9f034ba6f97b5a53518ca5cd73d8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/ceremony_country/partner_british/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/ceremony_country/partner_local/_opposite_sex.govspeak.erb: 25d34a7ced4b751bde4b1dffa7040a49
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/ceremony_country/partner_local/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/ceremony_country/partner_other/_opposite_sex.govspeak.erb: 25d34a7ced4b751bde4b1dffa7040a49
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/ceremony_country/partner_other/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/third_country/partner_british/_opposite_sex.govspeak.erb: 9b1e0eafdcef5f9976bbbe3ecfe03b87
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/third_country/partner_british/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/third_country/partner_local/_opposite_sex.govspeak.erb: e8ffc4136d0c10bca31df7b68cff2c81
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/third_country/partner_local/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/third_country/partner_other/_opposite_sex.govspeak.erb: 5c5523bc5f2bd4210015d7312f488268
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/third_country/partner_other/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_british/_opposite_sex.govspeak.erb: 836b9fbeeda1409744311c2827b65e63
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_british/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_local/_opposite_sex.govspeak.erb: 06ad4268325c2eb52c6365b4f1c5654b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_local/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_other/_opposite_sex.govspeak.erb: 06ad4268325c2eb52c6365b4f1c5654b
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_other/_same_sex.govspeak.erb: 467f8b2b113a89f251359fde1a65efa5
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_opposite_sex.govspeak.erb: a9f9918c8d7a100785e17e03df4d2cb5
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_same_sex.govspeak.erb: 4ac2c9180a2c2d3e783a266d61fdfd70
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_title.govspeak.erb: 323cdb9e9165cdc8804dff528da5432f
