Re-instate register a birth for Iran
Re-instate the flow for registering a birth for Iran. Content needs to
be updated which will follow in next commit. This re-instatement is
required first in order to allow the content changes to happen.

--- a/test/data/register-a-birth-responses-and-expected-results.yml
+++ b/test/data/register-a-birth-responses-and-expected-results.yml
@@ -2353,7 +2353,896 @@
 - :current_node: :country_of_birth?
   :responses:
   - iran
-  :next_node: :no_embassy_result
+  :next_node: :who_has_british_nationality?
+  :outcome_node: false
+- :current_node: :who_has_british_nationality?
+  :responses:
+  - iran
+  - mother
+  :next_node: :married_couple_or_civil_partnership?
+  :outcome_node: false
+- :current_node: :married_couple_or_civil_partnership?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  :next_node: :where_are_you_now?
+  :outcome_node: false
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - same_country
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  :next_node: :which_country?
+  :outcome_node: false
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - brazil
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - china
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - czech-republic
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - estonia
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - hong-kong
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - italy
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - libya
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - north-korea
+  :next_node: :north_korea_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - papua-new-guinea
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - philippines
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - sudan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - another_country
+  - taiwan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother
+  - 'yes'
+  - in_the_uk
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :married_couple_or_civil_partnership?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  :next_node: :where_are_you_now?
+  :outcome_node: false
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - same_country
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  :next_node: :which_country?
+  :outcome_node: false
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - brazil
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - china
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - czech-republic
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - estonia
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - hong-kong
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - italy
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - libya
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - north-korea
+  :next_node: :north_korea_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - papua-new-guinea
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - philippines
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - sudan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - another_country
+  - taiwan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother
+  - 'no'
+  - in_the_uk
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :who_has_british_nationality?
+  :responses:
+  - iran
+  - father
+  :next_node: :married_couple_or_civil_partnership?
+  :outcome_node: false
+- :current_node: :married_couple_or_civil_partnership?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  :next_node: :where_are_you_now?
+  :outcome_node: false
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - same_country
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  :next_node: :which_country?
+  :outcome_node: false
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - brazil
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - china
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - czech-republic
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - estonia
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - hong-kong
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - italy
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - libya
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - north-korea
+  :next_node: :north_korea_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - papua-new-guinea
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - philippines
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - sudan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - another_country
+  - taiwan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - father
+  - 'yes'
+  - in_the_uk
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :married_couple_or_civil_partnership?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  :next_node: :childs_date_of_birth?
+  :outcome_node: false
+- :current_node: :childs_date_of_birth?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2006-06-30'
+  :next_node: :homeoffice_result
+  :outcome_node: true
+- :current_node: :childs_date_of_birth?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  :next_node: :where_are_you_now?
+  :outcome_node: false
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - same_country
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  :next_node: :which_country?
+  :outcome_node: false
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - brazil
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - china
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - czech-republic
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - estonia
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - hong-kong
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - italy
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - libya
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - north-korea
+  :next_node: :north_korea_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - papua-new-guinea
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - philippines
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - sudan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - another_country
+  - taiwan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - father
+  - 'no'
+  - '2015-02-02'
+  - in_the_uk
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :who_has_british_nationality?
+  :responses:
+  - iran
+  - mother_and_father
+  :next_node: :married_couple_or_civil_partnership?
+  :outcome_node: false
+- :current_node: :married_couple_or_civil_partnership?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  :next_node: :where_are_you_now?
+  :outcome_node: false
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - same_country
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  :next_node: :which_country?
+  :outcome_node: false
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - brazil
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - china
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - czech-republic
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - estonia
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - hong-kong
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - italy
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - libya
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - north-korea
+  :next_node: :north_korea_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - papua-new-guinea
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - philippines
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - sudan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - another_country
+  - taiwan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'yes'
+  - in_the_uk
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :married_couple_or_civil_partnership?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  :next_node: :where_are_you_now?
+  :outcome_node: false
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - same_country
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  :next_node: :which_country?
+  :outcome_node: false
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - brazil
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - china
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - czech-republic
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - estonia
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - hong-kong
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - italy
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - libya
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - north-korea
+  :next_node: :north_korea_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - papua-new-guinea
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - philippines
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - sudan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - another_country
+  - taiwan
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :where_are_you_now?
+  :responses:
+  - iran
+  - mother_and_father
+  - 'no'
+  - in_the_uk
+  :next_node: :oru_result
+  :outcome_node: true
+- :current_node: :who_has_british_nationality?
+  :responses:
+  - iran
+  - neither
+  :next_node: :no_registration_result
   :outcome_node: true
 - :current_node: :country_of_birth?
   :responses:
