--- a/test/data/register-a-birth-responses-and-expected-results.yml
+++ b/test/data/register-a-birth-responses-and-expected-results.yml
@@ -2513,7 +2513,7 @@
   - mother
   - 'no'
   - same_country
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :where_are_you_now?
   :responses:
@@ -2521,115 +2521,7 @@
   - mother
   - 'no'
   - another_country
-  :next_node: :which_country?
-  :outcome_node: false
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - brazil
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - china
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - czech-republic
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - estonia
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - hong-kong
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - italy
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - libya
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - north-korea
-  :next_node: :north_korea_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - papua-new-guinea
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - philippines
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - sudan
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother
-  - 'no'
-  - another_country
-  - taiwan
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :where_are_you_now?
   :responses:
@@ -2637,7 +2529,7 @@
   - mother
   - 'no'
   - in_the_uk
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :who_has_british_nationality?
   :responses:
@@ -2814,7 +2706,7 @@
   - 'no'
   - '2015-02-02'
   - same_country
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :where_are_you_now?
   :responses:
@@ -2823,127 +2715,7 @@
   - 'no'
   - '2015-02-02'
   - another_country
-  :next_node: :which_country?
-  :outcome_node: false
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - brazil
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - china
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - czech-republic
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - estonia
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - hong-kong
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - italy
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - libya
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - north-korea
-  :next_node: :north_korea_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - papua-new-guinea
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - philippines
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - sudan
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - father
-  - 'no'
-  - '2015-02-02'
-  - another_country
-  - taiwan
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :where_are_you_now?
   :responses:
@@ -2952,7 +2724,7 @@
   - 'no'
   - '2015-02-02'
   - in_the_uk
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :who_has_british_nationality?
   :responses:
@@ -3112,7 +2884,7 @@
   - mother_and_father
   - 'no'
   - same_country
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :where_are_you_now?
   :responses:
@@ -3120,115 +2892,7 @@
   - mother_and_father
   - 'no'
   - another_country
-  :next_node: :which_country?
-  :outcome_node: false
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - brazil
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - china
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - czech-republic
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - estonia
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - hong-kong
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - italy
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - libya
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - north-korea
-  :next_node: :north_korea_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - papua-new-guinea
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - philippines
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - sudan
-  :next_node: :oru_result
-  :outcome_node: true
-- :current_node: :which_country?
-  :responses:
-  - iran
-  - mother_and_father
-  - 'no'
-  - another_country
-  - taiwan
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :where_are_you_now?
   :responses:
@@ -3236,7 +2900,7 @@
   - mother_and_father
   - 'no'
   - in_the_uk
-  :next_node: :oru_result
+  :next_node: :no_birth_certificate_result
   :outcome_node: true
 - :current_node: :who_has_british_nationality?
   :responses:
