--- a/lib/data/marriage_abroad_services.yml
+++ b/lib/data/marriage_abroad_services.yml
@@ -56,6 +56,13 @@ finland:
       default:
       - :issuing_cni_or_nulla_osta
   payment_partial_name: pay_in_euros_or_visa_electron
+iran:
+  opposite_sex:
+    ceremony_country:
+      default:
+      - :receiving_notice_of_marriage
+      - :issuing_cni_or_nulla_osta
+  payment_partial_name: pay_by_iranian_cash_only
 lebanon:
   opposite_sex:
     default:
